fix: wrap warning text

--- a/src/components/help/HelpTooltip.scss
+++ b/src/components/help/HelpTooltip.scss
@@ -1,8 +1,3 @@
-.HelpTooltip-trigger {
-  // Ensure embedded labels do not wrap their info icon on small screens
-  white-space: nowrap;
-}
-
 .tooltip-inner {
   p:last-of-type {
     margin-bottom: 0;
